<resources>
    <string name="app_name">WeekPlanner</string>
    <string name="registerButtonValue">Register</string>
    <string name="loginButtonValue">Login</string>
    <string name="usernameValue">Chose a username</string>
    <string name="email">Choose an email-adress</string>
    <string name="password">Choose a password</string>
    <string name="createAccount">Create Account</string>
    <string name="faceBook">Facebook</string>
    <string name="loginString">--------Log in with-----------</string>
    <string name="passwordplaceholder">Enter password min size 6 characters</string>
    <string name="emailplaceholder">Enter valid email adress</string>
    <string name="usernameplaceholder">Choose a username</string>
    <string name="loginButton">Log in</string>
    <string name="usernameemail">enter username or email</string>
    <string name="forgotPasswordValue"><u>Forgot password ?</u></string>
    <string name="resetPassword">Reset password</string>
    <string name="enter_new_password">enter new password</string>
</resources>
